# do-infrastructure-manager

./: .env.example  .gitignore  =0.50.0  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
ansible/: ansible.cfg
ansible/inventory/: inventory.ini  inventory.yml
ansible/playbooks/: ping.yml  setup-base.yml
dom/: __init__.py  cli.py
dom/commands/: __init__.py  ans.py  audit.py  cleanup.py  costs.py  export.py  tf.py
dom/tui/: __init__.py  app.py
dom/utils/: __init__.py  client.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  test_cli.py
